# s2_disc_l2

./: ChornaRada.txt  README.md  final_and_zvit.ipynb  project.ipynb  pyproject.toml
jupiter/: final_and_zvit.ipynb  non_diferent.txt
src/: ChornaRada.txt  final_and_zvit.ipynb  huffman.ipynb  huffman.py  lz77.py  lzw.py  part.txt  to_encode.txt
test/: test_lz.py
