[tool.poetry]
name = "lab2-discrete"
version = "0.1.0"
description = ""
authors = ["radomyr <h.radomyr@proton.me>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
